# Chatbot-to-Production

./: README.md  app_main.py  doc_ingest.py  pyproject.toml  qa_chain.py  utils.py
.github/workflows/: deploy.yml
Scripts/: deploy_container.sh
