[project]
name = "chatbot-to-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.4",
    "langchain-huggingface>=0.1.2",
    "pandas>=2.2.3",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
]
